--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -272,27 +272,27 @@
                 {% endfor %}
                 </tbody>
             </table>
-            {% if todos_produtos.has_other_pages %}
-                <ul class="pagination">
-                    {% if todos_produtos.has_previous %}
-                        <li><a href="?page={{ todos_produtos.previous_page_number }}">&laquo;</a></li>
-                    {% else %}
-                        <li class="disabled"><span>&laquo;</span></li>
-                    {% endif %}
-                    {% for i in todos_produtos.paginator.page_range %}
-                        {% if todos_produtos.number == i %}
-                            <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-                        {% else %}
-                            <li><a href="?page={{ i }}">{{ i }}</a></li>
-                        {% endif %}
-                    {% endfor %}
-                    {% if todos_produtos.has_next %}
-                        <li><a href="?page={{ todos_produtos.next_page_number }}">&raquo;</a></li>
-                    {% else %}
-                        <li class="disabled"><span>&raquo;</span></li>
-                    {% endif %}
-                </ul>
-            {% endif %}
+{#            {% if todos_produtos.has_other_pages %}#}
+{#                <ul class="pagination">#}
+{#                    {% if todos_produtos.has_previous %}#}
+{#                        <li><a href="?page={{ todos_produtos.previous_page_number }}">&laquo;</a></li>#}
+{#                    {% else %}#}
+{#                        <li class="disabled"><span>&laquo;</span></li>#}
+{#                    {% endif %}#}
+{#                    {% for i in todos_produtos.paginator.page_range %}#}
+{#                        {% if todos_produtos.number == i %}#}
+{#                            <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>#}
+{#                        {% else %}#}
+{#                            <li><a href="?page={{ i }}">{{ i }}</a></li>#}
+{#                        {% endif %}#}
+{#                    {% endfor %}#}
+{#                    {% if todos_produtos.has_next %}#}
+{#                        <li><a href="?page={{ todos_produtos.next_page_number }}">&raquo;</a></li>#}
+{#                    {% else %}#}
+{#                        <li class="disabled"><span>&raquo;</span></li>#}
+{#                    {% endif %}#}
+{#                </ul>#}
+{#            {% endif %}#}
         </div>
     </div>
     <script>
