--- a/supermarket/templates/supermarket/sobre.html
+++ b/supermarket/templates/supermarket/sobre.html
@@ -1,5 +1,5 @@
 {% extends "supermarket/layout.html" %}
-
+{% block class_sobre %} class="active" {% endblock %}
 {% block titulo %} SuperMarket - Sobre{% endblock %}
 
 {% block menu_lateral_esquerdo %}
