--- a/supermarket/templates/supermarket/contato.html
+++ b/supermarket/templates/supermarket/contato.html
@@ -1,5 +1,5 @@
 {% extends "supermarket/layout.html" %}
-
+{% block class_contato %} class="active" {% endblock %}
 {% block titulo %} SuperMarket - Contato {% endblock %}
 
 {% block menu_lateral_esquerdo %}
