--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -1,5 +1,5 @@
 {% extends "supermarket/layout.html" %}
-
+{% block class_promocoes %} class="active" {% endblock %}
 {% block titulo %} SuperMarket - Promoções {% endblock %}
 
 {% block style %}
