--- a/static/css/supermarket.css
+++ b/static/css/supermarket.css
@@ -2,12 +2,20 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.p {
+p {
     text-align: justify;
-    text-indent: 50px;
+    text-indent: 25px;
 }
 
-.footer {
+h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #303030;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+
+footer {
     text-indent: 0px;
     text-align: center;
     font-size: 6pt;
