--- a/supermarket/templates/supermarket/sobre.html
+++ b/supermarket/templates/supermarket/sobre.html
@@ -26,7 +26,8 @@
                     e,
                     assim, o presente projeto objetiva desenvolver um aplicativo para dispositivos móveis, plataforma
                     Android, que promova a divulgação de promoções de supermercados aos consumidores, inicialmente do
-                    município de Cacoal/RO. O desenvolvimento do aplicativo será feito com base no paradigma de
+                    município de Cacoal/RO.</p>
+                <p>O desenvolvimento do aplicativo será feito com base no paradigma de
                     programação
                     orientada a objetos em conjunto com sistema de banco de dados. Almeja-se que o aplicativo
                     possibilite,
