--- a/supermarket/templates/supermarket/home.html
+++ b/supermarket/templates/supermarket/home.html
@@ -11,16 +11,14 @@
 {% endblock %}
 
 {% block principal %}
-    <div id="about" class="container-fluid">
-        <div class="row">
-            <div class="col-sm-12">
-                <h2 class="text-center">SuperMarket</h2>
-                <p>Uma nova experiência em pesquisa de produtos de supermercados</p>
-                <br>
-            </div>
-            {% load static %}
-            <img class="img-responsive" src=" {% static '/img/logo_top.png' %}" alt="SuperMarket">
+    <div class="row">
+        <div class="col-sm-12">
+            <h2 class="text-center">SuperMarket</h2>
+            Uma nova experiência em pesquisa de produtos de supermercados
+            <br><br>
         </div>
+        {% load static %}
+        <img class="img-responsive" src=" {% static '/img/logo_top.png' %}" alt="SuperMarket">
     </div>
 
 {% endblock %}
