--- a/supermarket/templates/supermarket/layout.html
+++ b/supermarket/templates/supermarket/layout.html
@@ -142,9 +142,9 @@
 </div>
 
 <footer class="container-fluid text-center">
-    <p style="font-size: 10px">Instituto Federal de Educação, Ciência e Tecnologia de Rondônia – Câmpus Cacoal<br>
+    Instituto Federal de Educação, Ciência e Tecnologia de Rondônia – Câmpus Cacoal<br>
         Rodovia BR 364, KM 228, Lote 2-A, Zona Rural, Caixa Postal 146 - Cacoal/RO<br>
-        Telefone: (69) 3443-2445 E-mail: campuscacoal@ifro.edu.br / Site: www.ifro.edu.br</p>
+        Telefone: (69) 3443-2445 E-mail: campuscacoal@ifro.edu.br / Site: www.ifro.edu.br
 </footer>
 
 </body>
