--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -232,7 +232,7 @@
 
     <div class="container-fluid">
         <h2>Lista de Promoções</h2>
-        <p>Filtre as promoções pelo produto, marca, estabelecimento ou validade da promoção.</p>
+        Filtre as promoções pelo produto, marca, estabelecimento ou validade da promoção.
         <div class="form-group">
             <input id="myInput" type="text" class="form-control" placeholder="Busca de produtos..." autofocus/>
             {#            <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>#}
