--- a/supermarket/templates/supermarket/promocoes_por_produto.html
+++ b/supermarket/templates/supermarket/promocoes_por_produto.html
@@ -80,8 +80,8 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="text-center">Histório de preços</h2>
-            <canvas id="productsChart" width="300" height="50"></canvas>
+            <h2>Histórico de preços</h2>
+            <canvas id="productsChart" width="300" height="70"></canvas>
 
             <script>
                 var ctx = document.getElementById("productsChart");
@@ -94,28 +94,15 @@
                         datasets: [{
                             label: 'Datas',
                             data: precos,
-                            backgroundColor: [
-                                'rgba(255, 99, 132, 0.2)',
-                                'rgba(54, 162, 235, 0.2)',
-                                'rgba(255, 206, 86, 0.2)',
-                                'rgba(75, 192, 192, 0.2)',
-                                'rgba(153, 102, 255, 0.2)',
-                                'rgba(255, 159, 64, 0.2)'
-                            ],
-                            borderColor: [
-                                'rgba(255,99,132,1)',
-                                'rgba(54, 162, 235, 1)',
-                                'rgba(255, 206, 86, 1)',
-                                'rgba(75, 192, 192, 1)',
-                                'rgba(153, 102, 255, 1)',
-                                'rgba(255, 159, 64, 1)'
-                            ],
-                            borderWidth: 1
+                            borderColor: '#3cba9f',
+                            fill: false,
                         }]
-                    },
+                    }
+                    ,
                     options: {
                         scales: {
                             yAxes: [{
+
                                 ticks: {
                                     beginAtZero: true
                                 }
