--- a/supermarket/templates/supermarket/home.html
+++ b/supermarket/templates/supermarket/home.html
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h2 class="text-center">SuperMarket</h2>
-            Uma nova experiência em pesquisa de produtos de supermercados
+            <p>Uma nova experiência em pesquisa de produtos de supermercados.</p>
             <br><br>
         </div>
         {% load static %}
