promocao by category

--- a/supermarket/templates/supermarket/promocoes_por_produto.html
+++ b/supermarket/templates/supermarket/promocoes_por_produto.html
@@ -38,7 +38,7 @@
 {% block principal %}
     <div class="row">
         <div class="col-md-12">
-            <table class="table table-responsive table-bordered">
+            <table class="table table-responsive">
                 <tbody>
                 <tr>
                     {% for title_produto in produto_descricao %}
