--- a/supermarket/templates/supermarket/home.html
+++ b/supermarket/templates/supermarket/home.html
@@ -13,7 +13,7 @@
 {% block principal %}
     <div class="row">
         <div class="col-sm-12">
-            <h2 class="text-center">SuperMarket</h2>
+            <h2>SuperMarket</h2>
             <p>Uma nova experiência em pesquisa de produtos de supermercados.</p>
             <br><br>
         </div>
