--- a/static/css/supermarket.css
+++ b/static/css/supermarket.css
@@ -15,10 +15,19 @@ h2 {
     margin-bottom: 30px;
 }
 
-footer {
-    text-indent: 0px;
-    text-align: center;
-    font-size: 6pt;
+h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    color: #303030;
+    font-weight: 400;
+    margin-bottom: 30px;
 }
 
-
+footer {
+    background-color: #195128;
+    color: white;
+    padding: 5px;
+    text-indent: 0px;
+    text-align: center;
+    font-size: 8pt;
+}
