--- a/supermarket/templates/supermarket/layout.html
+++ b/supermarket/templates/supermarket/layout.html
@@ -18,22 +18,6 @@
     <style>
         {% block style %} {% endblock %}
 
-        h2 {
-            font-size: 24px;
-            text-transform: uppercase;
-            color: #303030;
-            font-weight: 600;
-            margin-bottom: 30px;
-        }
-
-        h4 {
-            font-size: 19px;
-            line-height: 1.375em;
-            color: #303030;
-            font-weight: 400;
-            margin-bottom: 30px;
-        }
-
         /* Remove the navbar's default margin-bottom and rounded borders */
         .navbar {
             margin-bottom: 0;
@@ -53,12 +37,7 @@
         }
 
         /* Set black background color, white text and some padding */
-        footer {
-            background-color: #195128;
-            color: white;
-            padding: 10px;
-            font-size: 8pt;
-        }
+
 
         /* On small screens, set height to 'auto' for sidenav and grid */
         @media screen and (max-width: 767px) {
@@ -75,7 +54,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -128,7 +107,7 @@
         {#            {% block menu_lateral_esquerdo %}{% endblock %}#}
         {##}
         {#        </div>#}
-        <div class="col-sm-12 text-justify">
+        <div class="col-sm-12 text-justify" style="margin-top:50px">
 
             {% block principal %} {% endblock %}
 
@@ -141,7 +120,7 @@
     </div>
 </div>
 
-<footer class="container-fluid text-center">
+<footer>
     Instituto Federal de Educação, Ciência e Tecnologia de Rondônia – Câmpus Cacoal<br>
         Rodovia BR 364, KM 228, Lote 2-A, Zona Rural, Caixa Postal 146 - Cacoal/RO<br>
         Telefone: (69) 3443-2445 E-mail: campuscacoal@ifro.edu.br / Site: www.ifro.edu.br
