--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -231,7 +231,7 @@
     {#    </section>#}
 
     <div class="container-fluid">
-        <h2>Lista de Promoções</h2>
+        <h2 class="page-header">Lista de Promoções</h2>
         {#        <p>Filtre as promoções pelo produto, marca, estabelecimento ou validade da promoção.</p>#}
         {##}
         {#        <div class="form-group">#}
