--- a/supermarket/templates/supermarket/contato.html
+++ b/supermarket/templates/supermarket/contato.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block principal %}
-        <h2>Entre em contato conosco</h2>
+        <h2 class="page-header">Entre em contato conosco</h2>
         <div class="row">
             <div class="col-sm-5">
                 <p><span class="glyphicon glyphicon-map-marker"></span> Cacoal/RO</p>
