--- a/supermarket/templates/supermarket/sobre.html
+++ b/supermarket/templates/supermarket/sobre.html
@@ -15,7 +15,7 @@
     <div id="about" class="container-fluid">
         <div class="row">
             <div class="col-sm-8">
-                <h2>Sobre o SuperMarket</h2><br>
+                <h2 class="page-header">Sobre o SuperMarket</h2><br>
                 <p>A Internet vem tomando proporções cada vez maiores e, com isso,
                     influenciando nosso cotidiano e modificando completamente o comportamento da sociedade. Uma das
                     grandes
