--- a/supermarket/templates/supermarket/promocoes_por_produto.html
+++ b/supermarket/templates/supermarket/promocoes_por_produto.html
@@ -80,7 +80,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2>Histórico de preços</h2>
+            <h2 class="page-header">Histórico de preços</h2>
             <canvas id="productsChart" width="300" height="70"></canvas>
 
             <script>
