--- a/supermarket/templates/supermarket/layout.html
+++ b/supermarket/templates/supermarket/layout.html
@@ -125,9 +125,7 @@
 </div>
 
 <footer>
-    Instituto Federal de Educação, Ciência e Tecnologia de Rondônia – Câmpus Cacoal<br>
-    Rodovia BR 364, KM 228, Lote 2-A, Zona Rural, Caixa Postal 146 - Cacoal/RO<br>
-    Telefone: (69) 3443-2445 E-mail: campuscacoal@ifro.edu.br / Site: www.ifro.edu.br
+    IFRO - Instituto Federal de Educação, Ciência e Tecnologia de Rondônia
 </footer>
 
 </body>
