--- a/supermarket/templates/supermarket/layout.html
+++ b/supermarket/templates/supermarket/layout.html
@@ -111,7 +111,7 @@
         {#            {% block menu_lateral_esquerdo %}{% endblock %}#}
         {##}
         {#        </div>#}
-        <div class="col-sm-12 text-justify" style="margin-top:50px">
+        <div class="col-md-12 text-justify" style="margin-top:50px">
 
             {% block principal %} {% endblock %}
 
