--- a/supermarket/templates/supermarket/layout.html
+++ b/supermarket/templates/supermarket/layout.html
@@ -17,38 +17,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.js"></script>
     <style>
         {% block style %} {% endblock %}
-
-        /* Remove the navbar's default margin-bottom and rounded borders */
-        .navbar {
-            margin-bottom: 0;
-            border-radius: 0;
-        }
-
-        /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-        .row.content {
-            height: 450px
-        }
-
-        /* Set gray background color and 100% height */
-        .sidenav {
-            padding-top: 20px;
-            background-color: #f1f1f1;
-            height: 100%;
-        }
-
-        /* Set black background color, white text and some padding */
-
-        /* On small screens, set height to 'auto' for sidenav and grid */
-        @media screen and (max-width: 767px) {
-            .sidenav {
-                height: auto;
-                padding: 15px;
-            }
-
-            .row.content {
-                height: auto;
-            }
-        }
     </style>
 </head>
 <body>
@@ -61,7 +29,6 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            {# carrega diretório da imagem #}
             {% load static %}
             <a class="navbar-brand"><img src="{% static '/img/logo.png' %}" class="img-rounded" alt=""
                                          height="100%"></a>
@@ -90,37 +57,11 @@
     </div>
 </nav>
 
-<div class="container-fluid text-center">
-    <div class="row content">
-        {#        <div class="col-sm-2 sidenav" align="left">#}
-        {#            <div class="panel panel-success">#}
-        {#                <div class="panel-heading"><span class="glyphicon glyphicon-tasks"></span> Menu</div>#}
-        {#                <div class="panel-body">#}
-        {#                    <p><a href="{% url 'supermarket.home' %}"><span class="glyphicon glyphicon-home"></span>#}
-        {#                        Home</a></p>#}
-        {#                    <p><a href="{% url 'supermarket.promocoes' %}"><span#}
-        {#                            class="glyphicon glyphicon-shopping-cart"></span>#}
-        {#                        Promoções</a></p>#}
-        {#                    <p><a href="{% url 'supermarket.sobre' %}"><span class="glyphicon glyphicon-question-sign"></span>#}
-        {#                        Sobre</a></p>#}
-        {#                     <p><a href="{% url 'supermarket.contato' %}"><span class="glyphicon glyphicon-envelope"></span>#}
-        {#                        Contato</a></p>#}
-        {#                </div>#}
-        {#            </div>#}
-        {##}
-        {#            {% block menu_lateral_esquerdo %}{% endblock %}#}
-        {##}
-        {#        </div>#}
-        <div class="col-md-12 text-justify" style="margin-top:50px">
-
+<div class="container-fluid" style="margin-top:50px">
+    <div class="row">
+        <div class="col-md-12">
             {% block principal %} {% endblock %}
-
         </div>
-        {#        <div class="col-sm-2" align="left">#}
-        {#        <br>#}
-        {#            {% block menu_lateral_direito %}{% endblock %}#}
-        {##}
-        {#        </div>#}
     </div>
 </div>
 
