--- a/supermarket/templates/supermarket/layout.html
+++ b/supermarket/templates/supermarket/layout.html
@@ -30,8 +30,7 @@
                 <span class="icon-bar"></span>
             </button>
             {% load static %}
-            <a class="navbar-brand"><img src="{% static '/img/logo.png' %}" class="img-rounded" alt=""
-                                         height="100%"></a>
+            <a class="navbar-brand"><img src="{% static '/img/logo.png' %}" style="border-radius: 10%" height="160%"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
