--- a/static/css/supermarket.css
+++ b/static/css/supermarket.css
@@ -26,8 +26,9 @@ h4 {
 footer {
     background-color: #195128;
     color: white;
-    padding: 5px;
+    padding: 10px;
     text-indent: 0px;
     text-align: center;
+    font-weight: bold;
     font-size: 8pt;
 }
